<!--
 * Copyright 2022 muyeyifeng
 *
 *    Licensed under the Apache License, Version 2.0 (the "License");
 *    you may not use this file except in compliance with the License.
 *    You may obtain a copy of the License at
 *
 *        http://www.apache.org/licenses/LICENSE-2.0
 *
 *    Unless required by applicable law or agreed to in writing, software
 *    distributed under the License is distributed on an "AS IS" BASIS,
 *    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *    See the License for the specific language governing permissions and
 *    limitations under the License.
-->
<resources>
    <string name="app_name">NFC_Handler</string>
    <string name="textView_text">Null</string>
    <string name="clear">Clear</string>
    <string name="nimtelogo">NIMTElogo</string>
    <string name="skip">skip</string>
    <string name="nullTemperature">--</string>
    <string name="temperatureLable">Temperature:</string>
    <string name="raw_measurements">RAW MEASUREMENTS</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="smart_system">Smart System</string>
</resources>